# cvx

./: CMakeLists.txt  README.md
CMake/: Config.cmake.in  FindCeres.cmake  Findglfw3.cmake  Install.cmake  Setup.cmake
include/cvx/util/camera/: camera.hpp
include/cvx/util/geometry/: octree.hpp  point.hpp  point_list.hpp  polygon.hpp  polygon_scanner.hpp  triangulate.hpp  trimesh_topology.hpp  util.hpp
include/cvx/util/imgproc/: concomp.hpp  gabor.hpp  rgbd.hpp
include/cvx/util/math/: ransac.hpp  rng.hpp
include/cvx/util/math/solvers/: lbfgs.hpp  lm.hpp
include/cvx/util/misc/: application_settings.hpp  arg_parser.hpp  binary_stream.hpp  cv_helpers.hpp  dictionary.hpp  dir_iterator.hpp  filesystem.hpp  logger.hpp  path.hpp  sequence.hpp  strings.hpp  xml_pull_parser.hpp  xml_sax_parser.hpp  zstream.hpp
include/cvx/util/pcl/: icp.hpp
include/cvx/util/viz/: gnuplot.hpp
modules/calib/: CMakeLists.txt  README.md
modules/calib/include/cvx/calib/: calibration.hpp  handeye.hpp  homography.hpp  pattern.hpp  pose.hpp
modules/calib/src/: CMakeLists.txt  DualQuaternion.h  calibration.cpp  handeye.cpp  homography.cpp  make_pattern.cpp  pattern.cpp  pose.cpp
modules/calib/test/: CMakeLists.txt  test_calib.cpp  test_homography.cpp
modules/calib/tools/: CMakeLists.txt  camera_ba.cpp  camera_intrinsics.cpp  hand_eye_registration.cpp
modules/stereo/include/cvx/stereo/: sgm.hpp
modules/stereo/src/: CMakeLists.txt  gaussian.cpp  sgm.cpp
modules/stereo/test/: CMakeLists.txt
modules/util/: CMakeLists.txt
modules/util/include/cvx/util/camera/: camera.hpp
modules/util/include/cvx/util/geometry/: kdtree.hpp  line.hpp  line_fit.hpp  octree.hpp  point.hpp  point_list.hpp  polygon.hpp  rectangle.hpp  triangle.hpp  triangulate.hpp  trimesh_topology.hpp  viewpoint_sampler.hpp
modules/util/include/cvx/util/imgproc/: concomp.hpp  gabor.hpp  rgbd.hpp
modules/util/include/cvx/util/math/: ransac.hpp  rng.hpp
modules/util/include/cvx/util/math/solvers/: bfgs.hpp  gradient_descent.hpp  lbfgs.hpp  lm.hpp
modules/util/include/cvx/util/misc/: application_settings.hpp  arg_parser.hpp  binary_stream.hpp  configuration.hpp  dictionary.hpp  dir_iterator.hpp  filesystem.hpp  logger.hpp  optional.hpp  parallel.hpp  path.hpp  strings.hpp  xml_pull_parser.hpp  zstream.hpp
modules/util/include/cvx/util/misc/detail/: format.hpp
modules/util/include/cvx/util/pcl/: align.hpp  icp.hpp
modules/util/include/cvx/util/viz/: gnuplot.hpp
modules/util/src/: CMakeLists.txt
modules/util/src/geometry/: kdtree.cpp  octree.cpp  polygon_scanner.cpp  triangulate.cpp  trimesh_topology.cpp  viewpoint_sampler.cpp
modules/util/src/imgproc/: concomp.cpp  rgbd.cpp
modules/util/src/math/: rng.cpp
modules/util/src/misc/: application_settings.cpp  arg_parser.cpp  binary_stream.cpp  cv_helpers.cpp  dictionary.cpp  dir_iterator.cpp  filesystem.cpp  logger.cpp  path.cpp  path_unix.cpp  sequence.cpp  strings.cpp  xml_pull_parser.cpp  xml_sax_parser.cpp  zstream.cpp
modules/util/src/pcl/: icp.cpp
modules/util/src/viz/: gnuplot.cpp
modules/util/test/: CMakeLists.txt  test_appsettings.cpp  test_argparse.cpp  test_geometry.cpp  test_lm.cpp  test_logger.cpp  test_path.cpp  test_strings.cpp  test_xml.cpp
modules/viz/include/cvx/viz/gui/: glfw_window.hpp  offscreen.hpp  trackball.hpp
modules/viz/include/cvx/viz/image/: tools.hpp  view.hpp  widget.hpp
modules/viz/include/cvx/viz/renderer/: ogl_shaders.hpp  renderer.hpp  text.hpp
modules/viz/include/cvx/viz/robot/: robot_scene.hpp
modules/viz/include/cvx/viz/scene/: camera.hpp  drawable.hpp  geometry.hpp  light.hpp  marker.hpp  material.hpp  mesh.hpp  node.hpp  scene.hpp  scene_fwd.hpp
modules/viz/src/: CMakeLists.txt
modules/viz/src/gui/: glfw_window.cpp  offscreen.cpp  trackball.cpp
modules/viz/src/image/: tools.cpp  tools_p.hpp  view.cpp  widget.cpp
modules/viz/src/image/iview/: iview.cpp  main_window.cpp  main_window.hpp
modules/viz/src/renderer/: font_manager.cpp  font_manager.hpp  glyph_cache.cpp  glyph_cache.hpp  mesh_data.cpp  mesh_data.hpp  ogl_shaders.cpp  renderer.cpp  renderer_impl.cpp  renderer_impl.hpp  text_item.cpp  text_item.hpp
modules/viz/src/robot/: robot_scene.cpp  urdf_loader.cpp  urdf_loader.hpp
modules/viz/src/scene/: assimp_loader.cpp  camera.cpp  geometry.cpp  intersect.cpp  intersect.hpp  marker.cpp  material.cpp  mesh.cpp  octree.cpp  octree.hpp  scene.cpp
modules/viz/test/: CMakeLists.txt  qt_glwidget.cpp  qt_glwidget.hpp  qt_openglwindow.cpp  qt_openglwindow.hpp  render_virtual_scene.cpp  test_imageview.cpp  test_offscreen.cpp  test_point_cloud.cpp  test_qt.cpp  test_renderer.cpp  test_robot.cpp  test_shapes.cpp
scripts/: configuration.yaml
src/libs/utils/: CMakeLists.txt
src/libs/utils/geometry/: kdtree.cpp  octree.cpp  polygon_scanner.cpp  trimesh_topology.cpp
src/libs/utils/imgproc/: concomp.cpp  rgbd.cpp
src/libs/utils/math/: lm_impl.cpp  rng.cpp
src/libs/utils/misc/: application_settings.cpp  arg_parser.cpp  binary_stream.cpp  dictionary.cpp  dir_iterator.cpp  dir_iterator_unix.cpp  filesystem.cpp  logger.cpp  path.cpp  path_unix.cpp  xml_pull_parser.cpp
src/libs/utils/pcl/: align.cpp  icp.cpp
src/libs/utils/viz/: gnuplot.cpp
test/: CMakeLists.txt  test_appsettings.cpp  test_argparse.cpp  test_path.cpp
